force-app/main/default/objects/Account_Planning__c/Account_Planning__c.object-meta.xml
<CustomObject>
    <label>Account Planning</label>
    <nameField>
        <label>Account Planning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>