force-app/main/default/objects/Account_Planning__c/fields/Account_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Account_Collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>