force-app/main/default/objects/Account_Planning__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champion</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Please make sure to insert Account first</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Planings</relationshipName>
    <type>Lookup</type>
</CustomField>