force-app/main/default/objects/Account_Planning__c/fields/Highlights_from_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Highlights_from_Annual_Report__c</fullName>
    <label>Highlights from Annual Report</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>