force-app/main/default/objects/Account_Planning__c/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <label>Need</label>
    <length>255</length>
    <type>Text</type>
</CustomField>