force-app/main/default/objects/Account_Planning__c/fields/Planned_closing_time__c.field-meta.xml
<CustomField>
    <fullName>Planned_closing_time__c</fullName>
    <label>Planned closing time</label>
    <type>Date</type>
</CustomField>