force-app/main/default/objects/Account_Planning__c/fields/Potential_Deal_Value_Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Potential_Deal_Value_Cross_Sell__c</fullName>
    <label>Potential Deal Value - Cross-Sell</label>
    <summarizedField>Upsell_Feature__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Upsell_Feature__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Cross-sell</value>
    </summaryFilterItems>
    <summaryForeignKey>Upsell_Feature__c.Account_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>