force-app/main/default/objects/Account_Planning__c/fields/Potential_Deal_Value_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Potential_Deal_Value_Upsell__c</fullName>
    <label>Potential Deal Value - Upsell</label>
    <summarizedField>Upsell_Feature__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Upsell_Feature__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Upsell</value>
    </summaryFilterItems>
    <summaryForeignKey>Upsell_Feature__c.Account_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>