force-app/main/default/objects/Account_Planning__c/fields/Purchasing_Team_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Team_Additional_Info__c</fullName>
    <label>Purchasing Team Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>