force-app/main/default/objects/Account_Planning__c/fields/Solution_Package_Fit__c.field-meta.xml
<CustomField>
    <fullName>Solution_Package_Fit__c</fullName>
    <label>Solution Package Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>