force-app/main/default/objects/Account_Planning__c/fields/Targetable_Team__c.field-meta.xml
<CustomField>
    <fullName>Targetable_Team__c</fullName>
    <inlineHelpText>Teams to Expand to</inlineHelpText>
    <label>Targetable Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing: SEO/Content</fullName>
            </value>
            <value>
                <fullName>Marketing: Management/General</fullName>
            </value>
            <value>
                <fullName>Marketing: PPC/Display</fullName>
            </value>
            <value>
                <fullName>Marketing: PR/comms/Social Media</fullName>
            </value>
            <value>
                <fullName>Marketing: Affiliate/media buying</fullName>
            </value>
            <value>
                <fullName>Sales/Business Development</fullName>
            </value>
            <value>
                <fullName>Account Management/Customer Success</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Strategy/Market Research</fullName>
            </value>
            <value>
                <fullName>Corporate Development/ Mergers and Acquisitions</fullName>
            </value>
            <value>
                <fullName>Bi/ Analytics</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Management (C-level)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>