force-app/main/default/objects/Account_Planning__c/fields/Targetable_Team_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Targetable_Team_Additional_Info__c</fullName>
    <label>Targetable Team Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>