force-app/main/default/objects/Account_Planning__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <formula>Potential_Deal_Value_Cross_Sell__c+Potential_Deal_Value_Upsell__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>