force-app/main/default/objects/Account_Planning__c/fields/Upsell_Feature__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Feature__c</fullName>
    <label>Upsell Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Users</fullName>
            </value>
            <value>
                <fullName>500 Table Results</fullName>
            </value>
            <value>
                <fullName>Unlimited Table Results</fullName>
            </value>
            <value>
                <fullName>12 Months Historical Data</fullName>
            </value>
            <value>
                <fullName>13 Months Historical Data</fullName>
            </value>
            <value>
                <fullName>15 Months Historical Data</fullName>
            </value>
            <value>
                <fullName>25 Months Historical Data</fullName>
            </value>
            <value>
                <fullName>37 Months HistoriczGeoal Data</fullName>
            </value>
            <value>
                <fullName>Individual Country Filters</fullName>
            </value>
            <value>
                <fullName>Country Filter Clusters</fullName>
            </value>
            <value>
                <fullName>US State Filter</fullName>
            </value>
            <value>
                <fullName>WorldWide Data</fullName>
            </value>
            <value>
                <fullName>Popular Pages &amp; Leading Folders</fullName>
            </value>
            <value>
                <fullName>App Engagement</fullName>
            </value>
            <value>
                <fullName>Monthly API Hits</fullName>
            </value>
            <value>
                <fullName>One Time API Hits</fullName>
            </value>
            <value>
                <fullName>Lead Generator</fullName>
            </value>
            <value>
                <fullName>Funnel Analysis</fullName>
            </value>
            <value>
                <fullName>Marketing Channels</fullName>
            </value>
            <value>
                <fullName>Search and Display Ads Module</fullName>
            </value>
            <value>
                <fullName>Digital Insights</fullName>
            </value>
            <value>
                <fullName>YoY Increase</fullName>
            </value>
            <value>
                <fullName>SIM Services</fullName>
            </value>
            <value>
                <fullName>Solution Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>